--- a/Lecture-9/newyorkTimes/index.html
+++ b/Lecture-9/newyorkTimes/index.html
@@ -8,14 +8,17 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <div class="container">
         <div class="nav-item date flexbox">
             <div class="icons">
-                <img width="30px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Hamburger_icon.svg/2048px-Hamburger_icon.svg.png">
+                <img width="30px"
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Hamburger_icon.svg/2048px-Hamburger_icon.svg.png">
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <img width="30px" src="https://cdn0.iconfinder.com/data/icons/very-basic-2-android-l-lollipop-icon-pack/24/search-512.png">
+                <img width="30px"
+                    src="https://cdn0.iconfinder.com/data/icons/very-basic-2-android-l-lollipop-icon-pack/24/search-512.png">
             </div>
             <div class="dateDetails">
                 <div class="todaysDate">
@@ -34,7 +37,8 @@
                     <div class="languageItem chinese">中文</div>
                 </div>
                 <div class="logo">
-                    <img width="600px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/58/NewYorkTimes.svg/2560px-NewYorkTimes.svg.png">
+                    <img width="600px"
+                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/58/NewYorkTimes.svg/2560px-NewYorkTimes.svg.png">
                 </div>
             </div>
         </div>
@@ -46,7 +50,8 @@
             </div>
             <div class="weatherForecast">
                 <div class="temprature">
-                    <img width="40px" src="https://i.pinimg.com/originals/ab/71/e2/ab71e28871caa8c7e300f3dd19e34184.png">
+                    <img width="40px"
+                        src="https://i.pinimg.com/originals/ab/71/e2/ab71e28871caa8c7e300f3dd19e34184.png">
                     <span style="vertical-align: top; font-size: 20px;">17°C 21° 8°</span>
                 </div>
                 <div class="stock">
@@ -56,43 +61,43 @@
         </div>
         <div class="nav-item categories">
             <div class="categoryItem">
-                World 
+                World
             </div>
             <div class="categoryItem">
-                 U.S.
+                U.S.
             </div>
             <div class="categoryItem">
-                Politics 
+                Politics
             </div>
             <div class="categoryItem">
-                N.Y. 
+                N.Y.
             </div>
             <div class="categoryItem">
-                Business 
+                Business
             </div>
             <div class="categoryItem">
-                Opinion 
+                Opinion
             </div>
             <div class="categoryItem">
                 Science
             </div>
             <div class="categoryItem">
-                Health 
+                Health
             </div>
             <div class="categoryItem">
-                Sports 
+                Sports
             </div>
             <div class="categoryItem">
                 Arts
             </div>
             <div class="categoryItem">
-                Books 
+                Books
             </div>
             <div class="categoryItem">
                 Style
             </div>
             <div class="categoryItem">
-                Food 
+                Food
             </div>
             <div class="categoryItem">
                 Travel
@@ -111,9 +116,42 @@
             </div>
         </div>
     </div>
-    <hr style="width: 73%; margin: auto; color: black;">
-    <hr style="width: 73%; margin: auto; color: black; margin-top: 3px;">
+    <hr style="width: 1400px; margin: auto; color: black;">
+    <hr style="width: 1400px; margin: auto; color: black; margin-top: 3px;">
 
+    <div class="containerNewsArticles">
+        <div class="newsSectionA">
+
+            <div class="newSectionA_1">
+                <!-- NEWS-SECTION_A - 1 -->
+                <div class="nsaContentA">
+                    <h2 class="h3 nsaContentAHeading">
+                        George Santos’s Lies Were Known to Some Well-Connected Republicans
+                    </h2>
+                    <ul class="nsaContentAList">
+                        <li class="nsaContentAListItem">Mr. Santos ignored advice to drop out of his House race after a background check in 2021
+                            uncovered his deceits, people with knowledge of the matter said.</li>
+                        <li class="nsaContentAListItem">The episode reveals that a small circle of Republican campaign professionals had indications of
+                            his lies far earlier than the public.</li>
+                    </ul>
+                    <small class="readTime">12 Min read</small>
+                </div>
+                <div class="nsaContentAImage">
+                    <img width="100%" src="https://static01.nyt.com/images/2023/01/13/nyregion/00santos-vetting/00santos-vetting-threeByTwoMediumAt2X.jpg?format=pjpg&quality=75&auto=webp&disable=upscale" alt="">
+                    <small>Haiyun Jiang/The New York Times</small>
+                </div>
+                
+                <!-- !NEWS-SECTION_A - 1 -->
+                <div class="clearfix"></div>
+            </div>
+            <hr>
+
+
+
+
+        </div>
+        <div class="newsSectionB"></div>
+    </div>
 </body>
 
 </html>
