--- a/Lecture-9/newyorkTimes/index.html
+++ b/Lecture-9/newyorkTimes/index.html
@@ -129,28 +129,63 @@
                         George Santos’s Lies Were Known to Some Well-Connected Republicans
                     </h2>
                     <ul class="nsaContentAList">
-                        <li class="nsaContentAListItem">Mr. Santos ignored advice to drop out of his House race after a background check in 2021
+                        <li class="nsaContentAListItem">Mr. Santos ignored advice to drop out of his House race after a
+                            background check in 2021
                             uncovered his deceits, people with knowledge of the matter said.</li>
-                        <li class="nsaContentAListItem">The episode reveals that a small circle of Republican campaign professionals had indications of
+                        <li class="nsaContentAListItem">The episode reveals that a small circle of Republican campaign
+                            professionals had indications of
                             his lies far earlier than the public.</li>
                     </ul>
                     <small class="readTime">12 Min read</small>
                 </div>
                 <div class="nsaContentAImage">
-                    <img width="100%" src="https://static01.nyt.com/images/2023/01/13/nyregion/00santos-vetting/00santos-vetting-threeByTwoMediumAt2X.jpg?format=pjpg&quality=75&auto=webp&disable=upscale" alt="">
+                    <img width="100%"
+                        src="https://static01.nyt.com/images/2023/01/13/nyregion/00santos-vetting/00santos-vetting-threeByTwoMediumAt2X.jpg?format=pjpg&quality=75&auto=webp&disable=upscale"
+                        alt="">
                     <small>Haiyun Jiang/The New York Times</small>
                 </div>
-                
+
                 <!-- !NEWS-SECTION_A - 1 -->
                 <div class="clearfix"></div>
             </div>
             <hr>
 
-
-
-
+            <div class="newSectionA_2">
+                <div class="secA_2_1">
+                    <h3>‘We Will Die for Brazil’: How a Far-Right Mob Tried to Oust Lula</h3>
+                    <p>An examination of the failed attempt to overthrow President Luiz Inácio Lula da Silva’s government reveals how extremism is threatening Brazil.</p>
+                    <div>11 MIN READ</div>
+                </div>
+                <div class="secA_2_2">
+                    <hr>
+                    <h3>Former President Jair Bolsonaro faces an investigation for allegedly inspiring the riot on Jan. 8.</h3>
+                    <div>5 MIN READ</div>
+                </div>
+                <div class="secA_2_3">
+                    <video muted autoplay width="100%" src="https://vp.nyt.com/video/2023/01/13/105528_1_vid13-brazil-tic-toc-57830_wg_720p.mp4"></video>
+                </div>
+            </div>
+        
         </div>
-        <div class="newsSectionB"></div>
+
+
+
+        <div class="newsSectionB">
+            <div class="newsSectionB_1">
+                <img width="100%"
+                    src="https://static01.nyt.com/images/2023/01/22/multimedia/22JOHN-CALE-02-czpm/22JOHN-CALE-02-czpm-threeByTwoMediumAt2X.jpg?format=pjpg&quality=75&auto=webp&disable=upscale">
+                <small>Chantal Anderson for The New York Times</small>
+                <div class="clearfix"></div>
+                <div class="newSectionB_1Details">
+                    <h2>John Cale’s Musical Journey Knows No Limits</h2>
+                    <p class="newSectionB_1DetailsPara">
+                        At 80, the musician who helped found the Velvet Underground is releasing a new LP and mentoring
+                        new generations of avant-garde creators.
+                    </p>
+                    <p class="read" style="margin-top: 10px;">10 MIN READ</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
