--- a/Lecture-20(DomManipulation)/EventsInDepth/index.html
+++ b/Lecture-20(DomManipulation)/EventsInDepth/index.html
@@ -9,7 +9,7 @@
     <script src="./script.js"></script>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/684aa66367.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://kit.fontawesome.com/684aa66367.css" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://kit.fontawesome.com/684aa66367.css" crossorigin="anonymous"> -->
 </head>
 
 <body>
@@ -24,12 +24,13 @@
         </div>
 
         <ul id="tasklist">
-            <li class="task task-1">
+            <!-- <li class="task task-1">
+                </i>
                 <input type="checkbox">
                 <span class="taskText">Running</span>
                 <div class="btnGrp">
-                    <button class="up">⬆️</button>
-                    <button class="down">⬇️</button>
+                    <button class="up"> <i class="fa-sharp fa-solid fa-angle-up"></i> </button>
+                    <button class="down"> <i class="fa-sharp fa-solid fa-arrow-down"></i> </button>
                     <button class="delete">🗑</button>
                 </div>
             </li>
@@ -42,7 +43,7 @@
                     <button class="down">⬇️</button>
                     <button class="delete">🗑</button>
                 </div>
-            </li>
+            </li> -->
 
         </ul>
     </div>
