--- a/Lecture-22(Medium)/MediumClone/index.html
+++ b/Lecture-22(Medium)/MediumClone/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
@@ -45,7 +46,9 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled">Link</a>
+                        <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                            ✍🏻
+                        </button>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -68,13 +71,6 @@
 
 
 
-    <!-- Carousel ------------------------------------------------>
-    <!-- @Carousel ------------------------------------------------>
-
-
-
-
-
 
 
 
@@ -83,6 +79,48 @@
 
 
     <!-- MainContent-Container ------------------------------------------------>
+    <div class="mainContent">
+        <!-- Button trigger modal -->
+
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control myTitle" placeholder="Title" aria-label="Username">
+                            <span class="input-group-text">@</span>
+                            <input type="text" class="form-control" placeholder="Author Name" aria-label="Server">
+                        </div>
+
+                        <div class="input-group">
+                            <span class="input-group-text">With textarea</span>
+                            <textarea class="form-control" aria-label="With textarea"></textarea>
+                        </div>
+
+                        <div class="mb-3">
+                            <!-- <label for="basic-url" class="form-label">Enter Blog Image</label> -->
+                            <br>
+                            <div class="input-group">
+                                <span class="input-group-text" id="basic-addon3">Enter Blog Image</span>
+                                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
+                            </div>
+                            <!-- <div class="form-text">Example help text goes outside the input group.</div> -->
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" id="addBlog" class="btn btn-primary">Add Blog</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- @MainContent-Container ------------------------------------------------>
 
 
@@ -114,6 +152,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
         integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
         crossorigin="anonymous"></script>
+    <script src="./js/script.js"></script>
+
 </body>
 
 </html>
