--- a/Lecture-23(NODEJS)/FilterApp/index.html
+++ b/Lecture-23(NODEJS)/FilterApp/index.html
@@ -33,7 +33,12 @@
         </div>
 
         <ul class="foodList">
-            <li>Shahi Paneer</li>
+            <li class="foodItem">Shahi Paneer
+                <div class="updateFoodCount">
+                    <span class="increaseFood">+</span>
+                    <span class="foodCount">3</span>
+                </div>
+            </li>
         </ul>
     </div>
 
