Bootstrap and NodeJS

--- a/Lecture-23(NODEJS)/FilterApp/index.html
+++ b/Lecture-23(NODEJS)/FilterApp/index.html
@@ -35,8 +35,10 @@
         <ul class="foodList">
             <li class="foodItem">Shahi Paneer
                 <div class="updateFoodCount">
+                    <span class="foodPrice">Price: $4</span>
                     <span class="increaseFood">+</span>
                     <span class="foodCount">3</span>
+                    <span class="decreaseFood">-</span>
                 </div>
             </li>
         </ul>
