Bootstrap and NodeJS

--- a/Lecture-23(NODEJS)/FilterApp/index.html
+++ b/Lecture-23(NODEJS)/FilterApp/index.html
@@ -33,14 +33,18 @@
         </div>
 
         <ul class="foodList">
-            <li class="foodItem">Shahi Paneer
+            <!-- <li class="foodItem">
+                <div class="foodName">
+                    Shahi Paneer<br>
+                    <div class="small">Made with Love❤️</div>
+                </div>
                 <div class="updateFoodCount">
                     <span class="foodPrice">Price: $4</span>
                     <span class="increaseFood">+</span>
-                    <span class="foodCount">3</span>
+                    <span class="foodCount">1</span>
                     <span class="decreaseFood">-</span>
                 </div>
-            </li>
+            </li> -->
         </ul>
     </div>
 
