Ajax, Events, JQuery

--- a/Lecture-27/ExpressJs/public/index.html
+++ b/Lecture-27/ExpressJs/public/index.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="header">
             <h1 class="heading">Todo List</h1>
-            <form action="/addtask" method="GET">
+            <form action="/addtask" method="POST">
                 <div class="inputTask">
                     <input name="task" type="text" id="newtask" placeholder="Enter New Task">
                     <button type="submit" id="addtask">Add Task</button>
